<resources>
    <string name="app_name">Pengukur Kebisingan</string>
    <string name="start">Mulai</string>
    <string name="stop">Berhenti</string>
    <string name="maksimal">Maksimal</string>
    <string name="saat_ini">Saat ini</string>
    <string name="minimal">Minimal</string>
    <string name="_00_00_00">00:00.00</string>
    <string name="simpan">Simpan</string>
    <string name="keterangan">Keterangan</string>
    <string name="pengambilan_data">Waktu pengambilan data</string>
    <string name="area">Area</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="simpan_data">Simpan Data</string>
    <string name="koordinat">Koordinat</string>
    <string name="batal">Batal</string>
    <string name="export_data">export data</string>
    <string name="confirm_delete_title">Apakah data ini akan dihapus?</string>
    <string name="confirm_delete_desc">Data yang dihapus tidak dapat dikembalikan</string>
    <string name="confirm_upload_title">Unggah data</string>
    <string name="confirm_upload_desc">Apakah anda yakin ingin mengunggah data-data di atas?</string>

    <string name="max_db">Max: <b><font fgcolor='#FF0000'>%s</font> db</b></string>
    <string name="min_db">Min: <b><font fgcolor='#1074B6'>%s</font> db</b></string>
    <string name="average_db">Rata-rata: <b><font fgcolor='#1074B6'>%s</font> db</b></string>
    <string name="noise_db">Kebisingan: <b><font fgcolor='#1074B6'>%s</font> db</b></string>
    <string name="waktu">Waktu</string>
    <string name="nilai">Nilai</string>
    <string name="lihat_daftar_data">Lihat Daftar Dataku</string>
    <string name="lihat_data_database">Lihat Data Database</string>
    <string name="ok">OK</string>
    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <string name="type_a">Tipe A</string>
    <string name="tipe_c">Tipe C</string>
    <string name="format_latitude">Latitude:\n%s</string>
    <string name="format_longitude">Longitude:\n%s</string>
    <string name="format_uploaded_date">Diunggah pada: %s</string>
    <string name="upload">Unggah</string>
    <string name="see">lihat</string>
    <string name="retry">ulangi</string>
    <string name="upload_success">Data berhasil diunggah</string>
    <string name="save_success">Data berhasil disimpan</string>
    <string name="delete_success">Data telah dihapus</string>
    <string name="upload_failure">Data gagal diunggah karena %s</string>
    <string name="csv_success">File CSV berhasil dibuat</string>
    <string name="csv_failed">File CSV gagal dibuat</string>

    <string-array name="array_area">
        <item>Perumahan dan pemukiman</item>
        <item>Perdagangan dan Jasa</item>
        <item>Perkantoran</item>
        <item>Ruang terbuka hijau</item>
        <item>Industri</item>
        <item>Fasilitas umum</item>
        <item>Rekreasi dan tempat hiburan</item>
        <item>Bandar Udara</item>
        <item>Stasiun Kereta Api</item>
        <item>Pelabuhan Laut</item>
        <item>Cagar Budaya</item>
        <item>Lingkungan Kegiatan</item>
        <item>Rumah Sakit</item>
        <item>Sekolah </item>
        <item>Tempat ibadah</item>
    </string-array>
</resources>