<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.recording.RecordingActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        style="@style/ToolbarTheme"
        app:title="@string/app_name"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_00_00_00"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnStop"
        app:layout_constraintTop_toTopOf="@+id/btnStop" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStop"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:enabled="false"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/btnStart"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTimer" />

    <TextView
        android:id="@+id/tvMaxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/maksimal"
        android:textAppearance="?attr/textAppearanceHeadline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStop" />

    <TextView
        android:id="@+id/tvMax"
        android:textAppearance="?attr/textAppearanceHeadline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvMaxTitle"
        app:layout_constraintStart_toStartOf="@id/tvMaxTitle"
        app:layout_constraintEnd_toEndOf="@id/tvMaxTitle"/>

    <TextView
        android:id="@+id/tvCurrentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/saat_ini"
        android:textAppearance="?attr/textAppearanceHeadline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvMaxTitle" />

    <TextView
        android:id="@+id/tvCurrent"
        android:textAppearance="?attr/textAppearanceHeadline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentTitle"
        app:layout_constraintStart_toStartOf="@id/tvCurrentTitle"
        app:layout_constraintEnd_toEndOf="@id/tvCurrentTitle"/>

    <TextView
        android:id="@+id/tvMinTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/allerta"
        android:text="@string/minimal"
        android:textAppearance="?attr/textAppearanceHeadline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvMaxTitle" />

    <TextView
        android:id="@+id/tvMin"
        android:textAppearance="?attr/textAppearanceHeadline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvMinTitle"
        app:layout_constraintStart_toStartOf="@id/tvMinTitle"
        app:layout_constraintEnd_toEndOf="@id/tvMinTitle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lihat_daftar_data"
        android:textAllCaps="false"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>